# igtie

./: .gitignore  README.md  pyproject.toml  requirements.txt  tailwind.config.js
app/: config.py  main.py  routes.py
app/account/: exceptions.py  models.py  routes.py  service.py
app/core/: config.py  log_config.py  security.py  webtools.py
app/db/: base.py  build.py  exceptions.py  init_db.py  manage.py
app/extensions/: loaders.py  logs.py
app/models/: base.py  category.py  db_base.py  list.py  user.py
app/modules/connect/: service.py
app/modules/do/: service.py
app/modules/play/: service.py
app/modules/visit/: service.py
app/modules/watch/: models.py  service.py
app/routes/: __init__.py  user.py
app/services/: crud_movie.py  crud_music.py  crud_user.py
app/someday/learn/: service.py
app/someday/listen/: service.py
app/someday/read/: service.py
app/someday/watch/: models.py  service.py
app/static/css/: main.css
app/static/src/: tw.css
app/templates/: _base.html  index.html
app/templates/shared/: _base.html  _header.html  _styles.html
app/templates/shared/partial/: splash_edit_example.html
app/webtools/: decorators.py  mount.py  seo.py  viewmodel.py
tests/: conftest.py
