[project]
name = "igtie"
version = "0.1.0"
description = "Track all the things you'll get to... eventually."
authors = [
    {name = "Mario Munoz", email = "pythonbynight@gmail.com"},
]
dependencies = [
    "fastapi>=0.81.0",
    "uvicorn[standard]>=0.18.3",
    "pydantic[dotenv]>=1.10.1",
    "jinja2>=3.1.2",
    "rich>=12.5.1",
    "beanie>=1.11.9",
    "pendulum>=2.1.2",
    "passlib>=1.7.4",
    "jinja2-fragments>=0.2.0",
    "attrs>=22.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
ignore_missing_imports_per_module = true
files = [
    "./app"
]